[gd_scene load_steps=11 format=3 uid="uid://bte0qlekgk630"]

[ext_resource type="Script" path="res://src/machines/love_hate_wheel/LoveHateWheel.gd" id="1_wigi7"]
[ext_resource type="Script" path="res://src/objects/Grabbable.gd" id="1_xvpyq"]
[ext_resource type="Texture2D" uid="uid://c5hg8mwt8lgdt" path="res://icon.svg" id="2_y8745"]
[ext_resource type="AudioStream" uid="uid://c1hvbol0icyqf" path="res://assets/audio/sfx/TurnLove.ogg" id="4_3vpfr"]
[ext_resource type="Texture2D" uid="uid://gj6yqswchheb" path="res://res/machines/emotional_wheel.png" id="4_fj4n3"]
[ext_resource type="AudioStream" uid="uid://dpk20fnbyc4gq" path="res://assets/audio/sfx/TurnHate.ogg" id="5_4s4i4"]
[ext_resource type="FontFile" uid="uid://c0pabp5w3i8ri" path="res://res/fonts/Roboto-Bold.ttf" id="5_ql3cr"]
[ext_resource type="AudioStream" uid="uid://lvnblj1m35rb" path="res://assets/audio/sfx/TurnClick.ogg" id="6_3vunf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6u12p"]
radius = 61.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dowhj"]
bg_color = Color(0.205853, 0.0531534, 0.139102, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.147672, 0.147672, 0.147672, 0.6)
shadow_size = 2
anti_aliasing_size = 1.226

[node name="LoveHateWheel" type="Node2D" node_paths=PackedStringArray("love_label", "hate_label", "wheel")]
script = ExtResource("1_wigi7")
love_status_texture = ExtResource("2_y8745")
hate_status_texture = ExtResource("2_y8745")
love_label = NodePath("StatusBar/LoveLabel")
hate_label = NodePath("StatusBar/HateLabel")
adjustment_per_revolution = 0.1
wheel = NodePath("Wheel")
wheel_speed_for_max_brightness = 20.0
ram_cost = 0.03

[node name="Base" type="StaticBody2D" parent="."]

[node name="Wheel" type="RigidBody2D" parent="."]
z_index = -1
collision_layer = 4
collision_mask = 0
can_sleep = false
freeze_mode = 1
angular_damp = 1.0
script = ExtResource("1_xvpyq")
reset_position_on_grab = false

[node name="Sprite2D" type="Sprite2D" parent="Wheel"]
scale = Vector2(0.905, 0.905)
texture = ExtResource("4_fj4n3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel"]
shape = SubResource("CircleShape2D_6u12p")

[node name="PinJoint2D" type="PinJoint2D" parent="."]
node_a = NodePath("../Base")
node_b = NodePath("../Wheel")

[node name="StatusBar" type="Node2D" parent="."]
z_index = -1
position = Vector2(0, -90)

[node name="Foreground" type="Label" parent="StatusBar"]
offset_left = -56.0
offset_top = -9.0
offset_right = 67.0
offset_bottom = 120.0
scale = Vector2(0.9, 0.15)

[node name="Panel" type="Panel" parent="StatusBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dowhj")

[node name="LoveLabel" type="Label" parent="StatusBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -18.0
offset_right = 45.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.383923, 0.711525, 0.372027, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_ql3cr")
theme_override_font_sizes/font_size = 20
text = "Love++"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HateLabel" type="Label" parent="StatusBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -18.0
offset_right = 45.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.894859, 0.32034, 0.258187, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_ql3cr")
theme_override_font_sizes/font_size = 20
text = "Hate++"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoveAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3vpfr")
bus = &"SFX"

[node name="HateAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4s4i4")
bus = &"SFX"

[node name="TickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3vunf")
volume_db = -13.544
max_polyphony = 16
bus = &"SFX"
